dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=osmanli_altin_coind.1
endif

if ENABLE_QT
  dist_man1_MANS+=osmanli_altin_coin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=osmanli_altin_coin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=osmanli_altin_coin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=osmanli_altin_coin-wallet.1
endif
endif
